# wacli

./: .gitignore  Containerfile  README.md  Taskfile.yaml  default.env  pyproject.toml
.github/workflows/: oci-publish.yml
tests/: test_aras_storage_plugin.py  test_directory_storage_plugin.py  test_file_storage_plugin.py  test_graph_catalog_plugin.py  test_integrate_stores.py  test_pywb.py  test_recompress.py  test_s3_storage_plugin.py  test_web_graph.py  utils.py
tests/assets/: test_websites.ttl
tests/assets/queries/: local_query.rq  remote_query.rq
wacli/: plugin_manager.py  plugin_types.py  run.py  web_graph.py
wacli_plugins/catalog/: graph.py
wacli_plugins/catalog/queries/: list_query.rq  local_query.rq  remote_query.rq
wacli_plugins/indexer/: pywb.py
wacli_plugins/operations/: debug.py  recompress.py
wacli_plugins/storage/: aras.py  directory.py  file.py  s3.py  utils.py
