[project]
name = "dnb-wacli"
description = ""
license = "GPL-3.0+"
version = "0.1.0"
readme = "README.md"
authors = [{name = "Natanael Arndt", email = "arndtn@gmail.com"}]
requires-python = '>=3.12,<4.0'
dependencies = [
    'rdflib (>=7.3.0,<8.0.0)',
    'click (>=8.1.7,<9.0.0)',
    'loguru (>=0.7.2,<0.8.0)',
    'aras-py @ git+https://github.com/deutsche-nationalbibliothek/aras-py',
    'uuid6 (>=2024.7.10,<2025.0.0)',
    'docker (>=7.1.0,<8.0.0)',
    'warcio @ git+https://github.com/deutsche-nationalbibliothek/warcio@wip/recompressorStream',
    "query-collection (>=0.1.6,<0.2.0)"
]

[project.scripts]
wacli = "wacli.run:cli"

[tool.poetry]
packages = [{include = "wacli"}]

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "N", # pep8-naming
    "RUF100", # Unused noqa directive
    "UP001", # Remove unused imports
    "UP003", # Use {} instead of type(...)
    "UP004", # Class inherits from object
    "UP005", # is deprecated, use
    "UP009", # UTF-8 encoding declaration is unnecessary
    "UP010", # Unnecessary __future__ import for target Python version
    "UP011", # Unnecessary parentheses to functools.lru_cache
    "UP012", # Unnecessary call to encode as UTF-8
    "UP017", # Use datetime.UTC alias
    "UP018", # Unnecessary {literal_type} call (rewrite as a literal)
    "UP019", # typing.Text is deprecated, use str
    "UP020", # Use builtin open
    "UP021", # universal_newlines is deprecated, use text
    "UP022", # Sending stdout and stderr to PIPE is deprecated, use capture_output
    "UP023", # cElementTree is deprecated, use ElementTree
    "UP024", # Replace aliased errors with OSError
    "UP025", # Remove unicode literals from strings
    "UP026", # mock is deprecated, use unittest.mock
    "UP029", # Unnecessary builtin import
    "UP034", # Avoid extraneous parentheses
    "UP035", # Import from {target} instead:
    "UP036", # Version block is outdated for minimum Python version
    "UP037", # Remove quotes from type annotation
    "UP039", # Unnecessary parentheses after class definition
    "FA", # flake8-future-annotations
]

[tool.pytest.ini_options]
addopts="--cov=wacli --cov=wacli_plugins"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"
respx = "^0.22.0"
pytest = "^8.3.2"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
